<resources>
    <string name="app_name">My Afya</string>
    <string name="action_settings">Settings</string>
    <string name="action_doctor_menu">Edit profile</string>
    <string name="title_activity_edit_UserData">Edit biodata</string>
    <string name="edit_user_data">Edit profile</string>
    <string name="title_string">Medical Information Management System</string>
    <string name="patient_string">Patient</string>
    <string name="doctor_string">Doctor</string>
    <string name="doc_string">Doctor</string>
    <string name="admin_string">Administrator</string>
    <string name="title_activity_patient_reg">Registration</string>
    <string name="alreadyRegistered_string">Already registered?</string>
    <string name="confirm_password_string">Confirm:</string>
    <string name="title_activity_log__in">log_In</string>
    <string name="title_activity_doctor_reg">doctor_reg</string>
    <string name="login_string">Login if already registered</string>
    <string name="email_string">Email:</string>
    <string name="password_string">Password</string>
    <string name="register_string">Register</string>
    <string name="fname_string">First Name</string>
    <string name="etfname_string">Name</string>
    <string name="lname_string">Last Name</string>
    <string name="etlname_string">Name</string>
    <string name="phone_string">Phone:</string>
    <string name="Email_string">Email:</string>
    <string name="btnReister_string">Register</string>
    <string name="title_activity_admin_login">Admin_login</string>
    <string name="login_admin">Login</string>
    <string name="email_admin">Email:</string>
    <string name="password_admin">Password:</string>
    <string name="login_admin_btn">Login</string>
    <string name="logon">Login Page</string>
    <string name="fnameRegister_string">First Name:</string>
    <string name="registerString">Register</string>
    <string name="loginString">Log In</string>
    <string name="registeredString">Already Registered?</string>
    <string name="lnameString">Last Name:</string>
    <string name="phoneString">Phone(+254):</string>
    <string name="emailString">Email:</string>
    <string name="nationalString">National/Passport Id:</string>
    <string name="passwordString">Password:</string>
    <string name="previous_password">Enter your previous password:</string>
    <string name="new_password">New password</string>
    <string name="confirm_password">Confirm password:</string>
    <string name="pleaseLogin">Please Log In</string>
    <string name="user_type">Register as:</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_patient">Patient</string>
    <string name="title_activity_appointment_book">AppointmentBook</string>
    <string name="title_activity_doctor">Doctor</string>
    <string name="title_activity_view_appointments">ViewAppointments</string>
    <string name="or_string">OR</string>
    <string name="title_activity_booking">Booking</string>
    <string name="greestin_string">Greeting</string>
    <string name="book_string">book</string>
    <string name="view_string">appointments</string>
    <string name="appointment_string">View appointments</string>
    <string name="bookAppointment_string">Book appointment</string>
    <string name="title_activity_view_appointment">ViewAppointment</string>
    <string name="submit_string">Submit</string>
    <string name="date_string">Set Date</string>
    <string name="facility_string">Facilities</string>
    <string name="national_id_string">National ID</string>
    <string name="edLname_string">Name</string>
    <string name="lname_String">Last Name</string>
    <string name="Fname_string">fname_string</string>
    <string name="FnameString">First Name</string>
    <string name="welcom_string">Welcome!</string>
    <string name="View_string">View appointments</string>
    <string name="Click_string">Click here</string>
    <string name="queue_string">Current Queue</string>
    <string name="click_string">Click here</string>
    <string name="patientHistory_string">Patient medical history</string>
    <string name="click_hereString">Click here</string>
    <string name="schedule_timeString">Schedule Time(s)</string>
    <string name="clickString">CLICK HERE</string>
    <string name="time_string">Set Time</string>

    <string name="Date_string">Set Date</string>
    <string name="docstring">Availble doctors:</string>
    <string name="appointmentdateString">Date and Time</string>
    <string name="title_activity_doctor_view">Appointments</string>
    <string name="title_activity_patient_view">View appointments</string>
    <string name="Datestring">Date</string>
    <string name="daystring">Time(availability):</string>
    <string name="timeString">Time Available</string>
    <string name="daysAvailable" />
    <string name="dateOfAppointment">---:---</string>
    <string name="title_activity_date">Date</string>
    <string name="choose_date">Choose date</string>
    <string name="appointmentString">Choose date of appointment</string>
    <string name="choose_datee">Choose date</string>
    <string name="time">Choose Time</string>
    <string name="approved">Apporved</string>
    <string name="waiting">Waiting Approval</string>
    <string name="rejected">Rejected Approvals</string>
    <string name="doctorlogin">Doctor Login</string>
    <string name="no_appointments_test">You have No appointments available!</string>
    <string name="no_medical_sources">No medical information sources found</string>
    <string name="empty_cursor">You have no referals</string>
    <string name="Pending_appointments">You have no pending appointments</string>
    <string name="queue">You have no queue</string>
    <string name="empty">You have no appointments</string>
    <string name="welcomMessage">Welcome to your profile</string>
    <string name="title_activity_queue">Queue</string>
    <string name="facility_String">Facilty:</string>
    <string name="radio_status">Waiting</string>
    <string name="adult">Adult</string>
    <string name="child">Child</string>
    <string name="patientType">Patient type:</string>
    <string name="others">Others</string>
    <string name="btn_maleButton">Male</string>
    <string name="button_femaleButton">Female</string>
    <string name="title_activity_appointment">Appointment</string>
    <string name="chk_approve_box">Approve appointment</string>
    <string name="chk_reject_box">Reject appointment</string>
    <string name="date_due_text">Date:</string>
    <string name="title_activity_referrals">Referrals</string>
    <string name="facility">Facility</string>
    <string name="Referred_doctor">Doctor</string>
    <string name="date_available">Date Available:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="name">Name</string>
    <string name="Sname">Name</string>
    <string name="submit">Refer</string>
    <string name="title_activity_login_register">LoginRegister</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_time_picker1">TimePicker1</string>
    <string name="title_activity_doctor_login">DoctorLogin</string>
    <string name="title_activity_medical__sources">Medical information sources</string>
    <string name="title_activity_biodata">Biodata</string>
    <string name="date">Date</string>
    <string name="title_activity_edit_demographics">EditDemographics</string>
    <string name="title_activity_edit_profile">Edit profile</string>
    <string name="doctor">Doctors</string>
    <string name="title_activity_refferral_view">Referral request</string>
    <string name="title_activity_doctor_view_referrals">Referrals</string>
    <string name="title_activity_patient_view_referrals">Referrals</string>
    <string name="title_activity_doctor_edit_details">Edit details</string>
    <string name="title_activity_notification_info">Notification</string>
    <string name="title_activity_medical_information_sources">Information sources</string>

</resources>
