<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@drawable/mybutton"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/activity_registration"
    tools:context=".Registration">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp">



        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:paddingLeft="20dp"
            android:background="@drawable/mybutton"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/fnameRegister_string"
                android:textSize="10pt"
                android:textStyle="bold"
                android:id="@+id/text_fname"
                android:layout_marginTop="25dp" />

            <EditText
                android:width="300dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textSize="10pt"
                android:id="@+id/etFname" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="10pt"
                android:layout_marginTop="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/lnameString"
                android:id="@+id/text_lname"  />


            <EditText
                android:width="300dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:textSize="10pt"
                android:id="@+id/etLastName" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/phoneString"
                android:textStyle="bold"
                android:textSize="10pt"
                android:layout_marginTop="30dp"
                android:id="@+id/text_phone"
              />

            <EditText
                android:width="300dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:ems="10"
                android:textSize="10pt"
                android:id="@+id/etPhone"
                android:maxLength="10"
                android:phoneNumber="true" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/emailString"
                android:textSize="10pt"
                android:textStyle="bold"
                android:id="@+id/text_email"  />


            <EditText
                android:width="300dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:textSize="10pt"
                android:id="@+id/etEmail" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/nationalString"
                android:textStyle="bold"
                android:textSize="10pt"
                android:id="@+id/national_id"
              />

            <EditText
                android:width="300dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:maxLength="8"
                android:textSize="10pt"
                android:id="@+id/nationalPassportId" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/passwordString"
                android:textSize="10pt"
                android:textStyle="bold"
                android:layout_marginTop="30dp"
                android:id="@+id/password_reg"
               />
            <EditText
                android:width="300dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:textSize="10pt"
                android:id="@+id/password" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/confirm_password"
                android:textStyle="bold"
                android:textSize="10pt"
                android:layout_marginTop="30dp"
                android:id="@+id/confirm_password" />

            <EditText
                android:width="300dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:ems="10"
                android:textSize="10pt"
                android:id="@+id/password_again" />
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Register Now"
                android:width="150dp"
                android:textColor="#ffffff"
                android:textSize="10pt"
                android:layout_marginTop="20dp"
                android:layout_marginRight="50dp"
                android:layout_marginLeft="20dp"
                android:layout_gravity="center"
                android:textStyle="bold"
                android:background="@drawable/ovalshape"
                android:onClick="onRegisterUser"
                android:id="@+id/btn_register" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>